--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Valentine's Day 💖</title>
+<title>Happy Valentine's Day, Avery 💖</title>
 <style>
   /* Background gradient */
   body {
