--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Valentine's Day, Avery 💖</title>
+<title>Will you be Valentine's? 💖</title>
 <style>
   /* Background gradient */
   body {
@@ -94,8 +94,8 @@
 <body>
 
 <div class="card">
-  <h1>Happy Valentine's Day 💖</h1>
-  <h2>To My Favorite Person</h2>
+  <h1>I love you bombsehll 💖</h1>
+  <h2>My Favorite Person</h2>
   <p id="message">Click the button for a surprise!</p>
   <button onclick="showLove()">Click Me 💌</button>
 </div>
